# estudo-python

./: .gitignore  ComparisonOperator.py  ConversorDePeso.py  ForLoops.py  FormatStrings.py  Paciente.py  Strings.py  app.py  requirements.txt
desafios/: main.py  (+5 more)
projeto-1/: 1main.py  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  hello-world.html  main.py  projeto-1.db  pyproject.toml  random-user.py
projeto-1/config/: celery.py  engine.py  schemas.py  senha_utils.py  session.py
projeto-1/consumers/: Consumer.py
projeto-1/controller/: AuthController.py  CeleryController.py  CeleryWorker.py  CursoController.py  MensageriaController.py  UsuarioController.py
projeto-1/jupyter/: Programação_Orientada_a_Objeto_(POO).ipynb
projeto-1/mensageria/: Consumer.py  Publisher.py  RMQConsumer.py  publisher_raw.py  test_rabitmq.py  test_rabitmq1.py
projeto-1/models/: Curso.py  usuario_curso.py
projeto-1/models/entities/: BrasilApiCep.py  Curso.py  Usuario.py  ViaCep.py
projeto-1/models/schemas/: usuario_schemas.py
projeto-1/projeto-1-migrations/: env.py
projeto-1/projeto-1-migrations/versions/: 019bfd2b02c5_criacao_tabelas.py  09f7f06a2317_inserir_na_tabela_de_usuarios.py  0d3fa347d71a_aumenta_campo_de_cep.py  0eb53089556b_insert_usuario_rafael.py  1309f5188652_alterando_viacep_usuario_id_para_entity.py  1b459a4e1566_mais_ajustes_dos_modelos.py  2f61fb9ce2e3_unique_no_nome.py  421561b90e73_atualizar_viacep_unidade.py  4486d196602a_coluna_senha_usuario.py  5339290e7b2c_tabela_de_cep.py  53ac6ae91299_ajustes_tabela_viacep.py  565d46d57a74_tabela_brasilapicep_nome_alteração.py  5e01a84e2cc6_generate.py  6af0172157bb_tabela_brasilapicep.py  8fca8dc342de_criar_tabela_usuarios.py  f185b4c36b39_remove_relationships_viacep_e_usuario.py
projeto-1/repository/: BrasilApiCepSyncRepository.py  CursoRepository.py  UsuarioRepository.py  ViacepRepository.py  ViacepRepositorySync.py
projeto-1/teste/: UsuarioCRUDTest.py
projeto-1/venv-projeto/: pyvenv.cfg
rate-limiter-ips/: Aggregator.py  Controller.py  DatabaseConnection.py  Publisher.py  Tasks.py  docker-compose.yml  dockerfile  echo  main.py  package-lock.json  package.json  pyproject.toml
rate-limiter-ips/estatisticas-frontend/: package-lock.json  package.json
rate-limiter-ips/init-scripts/: 001-init.sql
(+81 files in other folders)
