[tool.poetry]
name = "projeto-1"
version = "0.1.0"
description = "Projeto de prática e estudo python e tecnologias"
authors = ["RafaelN <rafaeln_nascimento@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
pydantic = ">=2.11.3,<3.0.0"
sqlalchemy = ">=2.0.40,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"